# nandio.pio

./: .gitignore  README.md  flake.nix  hello.py  index.html  index.js  main.py  nandio.pio  nandio.py  pyproject.toml
.github/workflows/: simulation.yml  test.yml
misc/: design-memo.md  digitaldiscovery.dwf3work  test_waveforms.py
mpy/: driver.py  driver_rp2.py  driver_sim.py  ftl.py  nand.py  nandio.py
sim/: cli.py  hello.py  nandio_pio.py  simulator.py
src/: cli.py  main.py  nandio.py  nandio_pio.py  simulator.py
tests/: test_hello.py  test_nandio.py  test_nandio_pio.py
