[project]
name = "nandio-pio"
description = "Accelerating NAND Flash Communication using PIO (Programmable IO)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adafruit-circuitpython-pioasm>=1.3.3",
    "click>=8.2.1",
    "pandas>=2.2.3",
    "rich>=14.0.0",
    "rich-click>=1.8.9",
    "rp2040-pio-emulator",
    "svgwrite>=1.4.3",
    "wavedrom>=2.0.3.post3",
]
license-files = ["LICENSE"]
dynamic = ["version"]

[tool.uv.sources]
rp2040-pio-emulator = { git = "https://github.com/NathanY3G/rp2040-pio-emulator" }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "setuptools-scm>=8.3.1",
    "ty>=0.0.1a6",
]


[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = true }]

[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sim"]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
cache_dir = ".pytest_cache"
testpaths = ["tests"]
